# katas

./: ConwaysGameOfLife.sln  Elevator.sln  LeapYear.sln  README.md  Tennis.sln  kata-HotelBooking.sln  kata-SmartFridge.sln  kata-StringCalculator.sln  kata-TicTacToe.sln
Bank/: AccountService.cs  IStatementPrinter.cs  kata-Bank.sln
Bank.Tests/: InlineAutoMoqDataAttribute.cs  TransactionRepositoryShould.cs
BankOcr/: BankOcr.sln  README.md
Bowling/: Bowling.sln  BowlingScorer.cs  GameCardParser.cs
Bowling.Tests/: Bowling.Tests.csproj  BowlingScorerShould.cs  InlineAutoMoqDataAttribute.cs
ConwaysGameOfLife/: Board.cs  GameOfLife.cs  README.md
ConwaysGameOfLife.Tests/: GameOfLifeShould.cs  InlineAutoMoqDataAttribute.cs
Diamond/: Diamond.sln  README.md
DrivingLicense/py/driving-license/: Dockerfile  README.md  app.py  pyproject.toml
DrivingLicense/py/driving-license/driving_license/: driving_license_data.py  driving_license_request.py  generator.py
DrivingLicense/py/driving-license/tests/: test_driving_license_generator.py
Elevator/: Call.cs  Elevator1.cs  Floor.cs  README.md  Trip.cs  Trips.cs
Elevator.Tests/: Elevator1Should.cs  InlineAutoNSubstituteDataAttribute.cs  TripsShould.cs
Fibonacci/: Fibonacci.sln  README.md
FizzBuzz/: FizzBuzz.sln  README.md
FizzBuzz.Tests/: InlineAutoMoqDataAttribute.cs
GameOfLife.Console/: Program.cs
GildedRose/: .gitignore
HotelBooking.Abstractions/: HotelBooking.Abstractions.csproj  IBookingPolicyRepository.cs  IBookingPolicyService.cs  IBookingRepository.cs  ICompanyRepository.cs  ICompanyService.cs  (+2 more)
(+277 files in other folders)
